[package]
name = "remark-commit"
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/jambrains/remark-commit"
repository = "https://github.com/jambrains/remark-commit"
readme = "README.md"
license = "GPL-3.0-only"
description = "Remark commit hashes on the Polkadot blockchain"

[dependencies]
clap = { version = "4.5.43", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11"
log = "0.4"
subxt = "0.38"
subxt-signer = "0.38"
tokio = { version = "1", features = ["full"] }
